[gd_scene load_steps=17 format=3 uid="uid://osyyb8n7m552"]

[ext_resource type="PackedScene" uid="uid://dxup3grjbdhh8" path="res://ship.tscn" id="1_80nbo"]
[ext_resource type="Script" uid="uid://6ww4sj6vedkq" path="res://game.gd" id="1_e2o6t"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_e2o6t"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_feb5d"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fc0e3"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7jktm"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_e2o6t"]
vertices = PackedVector2Array(-470.90625, -283.20313, -326.29688, -319.14063, -367.2422, 1427.9375, -451.10156, 1570.0391, 2681.5469, 1584.9531, 2558.3203, 1444.0625, 2594.4219, -421.96094, 2503.6875, -273.96094, -274.15625, -410.03125, -289.6875, -284.95313)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 3, 2, 5), PackedInt32Array(6, 4, 5, 7), PackedInt32Array(8, 6, 7, 9)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-301, -275, 2494, -264, 2548, 1434, -357, 1418, -316, -332, -481, -291, -461, 1580, 2692, 1595, 2604, -432, -283, -420)])

[sub_resource type="SystemFont" id="SystemFont_feb5d"]

[sub_resource type="Theme" id="Theme_fc0e3"]
default_font = SubResource("SystemFont_feb5d")
default_font_size = 38

[sub_resource type="SystemFont" id="SystemFont_e2o6t"]

[sub_resource type="Theme" id="Theme_feb5d"]
default_font = SubResource("SystemFont_e2o6t")
default_font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2o6t"]
bg_color = Color(0.34509805, 0.6901961, 0.39215687, 0.67058825)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="InputEventKey" id="InputEventKey_e2o6t"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_feb5d"]
events = [SubResource("InputEventKey_e2o6t")]

[sub_resource type="InputEventKey" id="InputEventKey_feb5d"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_fc0e3"]
events = [SubResource("InputEventKey_feb5d")]

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")

[node name="GameEntities" type="Node2D" parent="."]
process_mode = 1

[node name="Boundaries" type="StaticBody2D" parent="GameEntities"]
position = Vector2(990, 0)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameEntities/Boundaries"]
shape = SubResource("WorldBoundaryShape2D_e2o6t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GameEntities/Boundaries"]
position = Vector2(990, 512)
shape = SubResource("WorldBoundaryShape2D_feb5d")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GameEntities/Boundaries"]
position = Vector2(-990, 512)
shape = SubResource("WorldBoundaryShape2D_fc0e3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GameEntities/Boundaries"]
position = Vector2(0, 1024)
shape = SubResource("WorldBoundaryShape2D_7jktm")

[node name="Camera" type="Camera2D" parent="GameEntities"]
position = Vector2(990, 512)

[node name="Ship" parent="GameEntities" instance=ExtResource("1_80nbo")]
position = Vector2(990, 512)

[node name="EnemySpawnArea" type="NavigationRegion2D" parent="GameEntities"]
navigation_polygon = SubResource("NavigationPolygon_e2o6t")

[node name="ElapsedTimeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
ignore_time_scale = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[node name="Hud" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Hud"]
offset_left = 23.0
offset_top = 27.0
offset_right = 177.0
offset_bottom = 80.0
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fc0e3")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Hud/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score:  "

[node name="ScoreLabel" type="Label" parent="Hud/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Hud/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fc0e3")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Hud/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Health:"

[node name="HealthLabel" type="Label" parent="Hud/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "100"

[node name="FinalScoreLabel" type="Label" parent="Hud"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 14
theme_override_constants/shadow_outline_size = 14
theme_override_font_sizes/font_size = 60
text = "FINAL SCORE: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUpWindow" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="CenterContainer" type="CenterContainer" parent="LevelUpWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_feb5d")

[node name="PanelContainer" type="PanelContainer" parent="LevelUpWindow/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e2o6t")

[node name="MarginContainer" type="MarginContainer" parent="LevelUpWindow/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUpWindow/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Upgrade_1" type="Button" parent="LevelUpWindow/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
shortcut = SubResource("Shortcut_feb5d")
text = "Damage +10%"

[node name="Upgrade_2" type="Button" parent="LevelUpWindow/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_fc0e3")
text = "Damage +10%"

[node name="Upgrade_3" type="Button" parent="LevelUpWindow/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Damage +10%"

[connection signal="destroyed" from="GameEntities/Ship" to="." method="on_ship_destroyed"]
[connection signal="health_changed" from="GameEntities/Ship" to="." method="on_ship_health_changed"]
[connection signal="timeout" from="ElapsedTimeTimer" to="." method="update_elapsed_time"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="spawn_enemy"]
[connection signal="pressed" from="LevelUpWindow/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Upgrade_1" to="." method="upgrade_chosen" binds= [0]]
[connection signal="pressed" from="LevelUpWindow/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Upgrade_2" to="." method="upgrade_chosen" binds= [1]]
[connection signal="pressed" from="LevelUpWindow/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Upgrade_3" to="." method="upgrade_chosen" binds= [2]]
